--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -24,7 +24,9 @@ div.delete {
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.2);
     margin-bottom: 3px !important;
 }
-
+div.textArea {
+    max-height: 100% !important;
+}
 .scale-up {
 	-webkit-animation: scale-up 0.4s cubic-bezier(0, 0.8, 0.565, 1.000) both;
 	        animation: scale-up 0.4s cubic-bezier(0, 0.8, 0.565, 1.000) both;
